--- a/static/style.css
+++ b/static/style.css
@@ -1,3 +1,30 @@
+/* Lato (light, regular) */
+@font-face {
+  font-family: Lato;
+  font-weight: 300;
+  font-style: normal;
+  text-rendering: optimizeLegibility;
+  src: url("../fonts/lato-light/lato-light.woff2") format("woff2"), url("../fonts/lato-light/lato-light.woff") format("woff");
+}
+
+/* Lato (normal, regular) */
+@font-face {
+  font-family: Lato;
+  font-weight: 400;
+  font-style: normal;
+  text-rendering: optimizeLegibility;
+  src: url("../fonts/lato-normal/lato-normal.woff2") format("woff2"), url("../fonts/lato-normal/lato-normal.woff") format("woff");
+}
+
+/* Lato (normal, italic) */
+@font-face {
+  font-family: Lato;
+  font-weight: 400;
+  font-style: italic;
+  text-rendering: optimizeLegibility;
+  src: url("../fonts/lato-normal-italic/lato-normal-italic.woff2") format("woff2"), url("../fonts/lato-normal-italic/lato-normal-italic.woff") format("woff");
+}
+
 ::-webkit-scrollbar {
     display: none;
 }
@@ -11,6 +38,12 @@ body {
     font-weight: 300;
 
     margin: 0;
+}
+
+@media (max-width: 700px) {
+    body {
+        font-size: 13pt;
+    }
 }
 
 .night body {
@@ -184,7 +217,7 @@ p.footer {
     .days__day {
         display: none;
 
-        padding: 5vh 10vw;
+        padding: 5vh 10vw 4em;
 
         height: 100vh;
         min-width: 100vw;
