--- a/static/style.css
+++ b/static/style.css
@@ -7,6 +7,15 @@
   src: url("../fonts/lato-light/lato-light.woff2") format("woff2"), url("../fonts/lato-light/lato-light.woff") format("woff");
 }
 
+/* Lato (light, italic) */
+@font-face {
+  font-family: Lato;
+  font-weight: 300;
+  font-style: italic;
+  text-rendering: optimizeLegibility;
+  src: url("../fonts/lato-light-italic/lato-light-italic.woff2") format("woff2"), url("../fonts/lato-light-italic/lato-light-italic.woff") format("woff");
+}
+
 /* Lato (normal, regular) */
 @font-face {
   font-family: Lato;
@@ -14,15 +23,6 @@
   font-style: normal;
   text-rendering: optimizeLegibility;
   src: url("../fonts/lato-normal/lato-normal.woff2") format("woff2"), url("../fonts/lato-normal/lato-normal.woff") format("woff");
-}
-
-/* Lato (normal, italic) */
-@font-face {
-  font-family: Lato;
-  font-weight: 400;
-  font-style: italic;
-  text-rendering: optimizeLegibility;
-  src: url("../fonts/lato-normal-italic/lato-normal-italic.woff2") format("woff2"), url("../fonts/lato-normal-italic/lato-normal-italic.woff") format("woff");
 }
 
 ::-webkit-scrollbar {
