--- a/static/style.css
+++ b/static/style.css
@@ -142,6 +142,12 @@ p.logo {
     line-height: 150%;
 }
 
+@media (max-width: 700px) {
+    .feature-box-columns {
+        flex-direction: column;
+    }
+}
+
 .feature-box {
     margin-top: 3em;
 }
@@ -150,11 +156,18 @@ p.logo {
     width: 50%;
 }
 
+@media (max-width: 700px) {
+    .feature-box-columns .feature-box {
+        width: auto;
+    }
+}
+
 h2.feature {
     color: #737273;
 
     font-size: 2em;
     font-weight: 300;
+    line-height: 1em;
 
     margin-bottom: 0.75em;
 }
@@ -167,7 +180,7 @@ p.feature {
 }
 
 .footer-box {
-    margin-top: 6em;
+    margin-top: 3em;
 }
 
 p.footer {
